--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
 
             <nav class="menu__header">
-                <a href="#">
+                <a href="carrinho.html">
                     <img width="50" height="50" class="icone carrinho" src="https://img.icons8.com/ios/50/FFFFFF/shopping-cart-loaded--v1.png" alt="shopping-cart-loaded--v1"/>
                 </a>
                 <a href="#">
