--- a/carrinho.html
+++ b/carrinho.html
@@ -34,7 +34,7 @@
                 <a href="carrinho.html  ">
                     <img width="50" height="50" class="icone carrinho" src="https://img.icons8.com/ios/50/FFFFFF/shopping-cart-loaded--v1.png" alt="shopping-cart-loaded--v1"/>
                 </a>
-                <a href="#">
+                <a href="login.php">
                     <img width="50" height="50" class="icone login" src="https://img.icons8.com/ios/50/FFFFFF/login-rounded-right--v1.png" alt="login-rounded-right--v1"/>
                 </a>
             </nav>
