--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
 
 
     <!-- DESTAQUES -->
-        <!-- PELO AMOR DE DEUS VICTOR HUGO NÃO ESQUECE DE MUDAR O LOREM IPSUM -->
     <div class="destaques">
         <div class="computer section">
             <div id="computer__menu">
@@ -95,7 +94,7 @@
                     </div>
                     <h4 class="card__name">Monitor LG UltraWide</h4>
                     <div class="card__description">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi tempora consequatur temporibus quos nesciunt eum</p>
+                        <p>Se você está buscando uma experiência imersiva nos mais variados tipos de jogos como estratégia, RPS, corrida, esse monitor é ideal para você.</p>
                     </div>
                 </div></a>
 
@@ -106,7 +105,7 @@
                     </div>
                     <h4 class="card__name">SSD NVME 980 PRO 1TB</h4>
                     <div class="card__description">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi tempora consequatur temporibus quos nesciunt eum</p>
+                        <p>Solução de Ultima geração O NV2 PCIe 4.0 NVMe é uma solução substancial de armazenamento de última geração .</p>
                     </div>
                 </div>
 
@@ -258,7 +257,7 @@
             <div class="footer-nav">
             <ul>
                 <li><a href="#">Loja</a></li>
-                <li><a href="#">Sobre Nos</a> </li>
+                <li><a href="sobreNos.html">Sobre Nos</a> </li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Ajuda</a></li>
                 <li><a href="#">Politica de Privacidade</a></li>
@@ -270,7 +269,7 @@
                 <p>Copyright &copy;2023;</p>
             </div>
         </div>
-</footer>
+    </footer>
 
     <script src="script/script.js"></script>
 </body>
