--- a/produto.html
+++ b/produto.html
@@ -43,7 +43,7 @@
                 <a href="carrinho.html">
                     <img width="50" height="50" class="icone carrinho" src="https://img.icons8.com/ios/50/FFFFFF/shopping-cart-loaded--v1.png" alt="shopping-cart-loaded--v1"/>
                 </a>
-                <a href="#">
+                <a href="login.php">
                     <img width="50" height="50" class="icone login" src="https://img.icons8.com/ios/50/FFFFFF/login-rounded-right--v1.png" alt="login-rounded-right--v1"/>
                 </a>
             </nav>
@@ -59,8 +59,6 @@
         </div>
         <!--home-text-->
         <div class="home-text">
-
-            <!-- DNV VICTOR (ou Luiza) NÃO ESQUECE DE MUDAR O LOREM IPSUM -->
 
             <h1>Monitor LG <br>UltraWide</h1>
             <h5>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis eos, et assumenda magnam voluptatibus, molestias illo ducimus itaque quaerat, odit cumque ex earum ut vel labore est rem hic tempora.</h5>
@@ -118,29 +116,31 @@
     </main>
     
     <footer>
-            <div class="footer-container">
-                <div class="footer-icons">
-                    <a href="#"><i class='bx bxl-facebook-square' ></i></a>
-                    <a href="#"><i class='bx bxl-twitter' ></i></a>
-                    <a href="#"><i class='bx bxl-instagram' ></i></a>
-                    <a href="#"><i class='bx bxl-youtube' ></i></a>
-                </div>
-                <div class="footer-nav">
-                <ul>
-                    <li><a href="#">Loja</a></li>
-                    <li><a href="#">Sobre Nos</a> </li>
-                    <li><a href="#">Contato</a></li>
-                    <li><a href="#">Ajuda</a></li>
-                    <li><a href="#">Politica de Privacidade</a></li>
-                    <li><a href="#">Termo e Condicoes</a></li>
-                    <li></li>
-                </ul>
-                </div>
-                <div class="footer-botton">
-                    <p>Copyright &copy;2023;</p>
-                </div>
+        <div class="footer-container">
+            <div class="footer-icons">
+                <a href="#"><i class='bx bxl-facebook-square' ></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="#"><i class='bx bxl-instagram' ></i></a>
+                <a href="#"><i class='bx bxl-youtube' ></i></a>
             </div>
+            <div class="footer-nav">
+            <ul>
+                <li><a href="#">Loja</a></li>
+                <li><a href="sobreNos.html">Sobre Nos</a> </li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Ajuda</a></li>
+                <li><a href="#">Politica de Privacidade</a></li>
+                <li><a href="#">Termo e Condicoes</a></li>
+                <li></li>
+            </ul>
+            </div>
+            <div class="footer-botton">
+                <p>Copyright &copy;2023;</p>
+            </div>
+        </div>
     </footer>
+
     <script src="script/main.js"></script>
+    <script src="script/carrinho.js"></script>
 </body>
 </html>
