--- a/sobreNos.html
+++ b/sobreNos.html
@@ -1,16 +1,9 @@
-<?php
-    session_start();
-    include('php/conexão.php');
-
-?>
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-
+    <title>Sobre nós</title>
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
@@ -22,13 +15,12 @@
     <!--CSS-->
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/cadastro.css">
+    <link rel="stylesheet" href="css/sobrenos.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="icon" type="image/x-icon" href="img/favicon_package_v0.16/favicon.ico">
 </head>
 <body>
-
-<header class="cabecalho">
+    <header class="cabecalho">
         <div class="header__container">
 
             <a href="index.html"><img class="logo" src="img/logo_branca.png" alt="logo"></a>
@@ -53,66 +45,40 @@
             </nav>
         </div>
     </header>
-    
-    <form class="form__cadastro" action="cadastrar.php" method="POST">
-        <h1>Crie sua conta</h1>
-
-        <div class="info__p">
-            <span>Informações pessoais</span>
-            <div class="input__container">
-                <label for="nome">Nome</label>
-                <input type="text" name="nome" required>
-            </div>
-
-            <div class="input__container">
-                <label for="sobrenome">Sobrenome</label>
-                <input type="text" name="sobrenome" required>
-            </div>
-
-            <div class="input__container">
-                <label for="cpf">CPF</label>
-                <input type="text" name="cpf" required>
-            </div>
-
-            <div class="input__container">
-                <label for="celular">Celular</label>
-                <input type="text" nam="celular">
-            </div>
-        </div>
-
-        <div class="entrega">
-            <span>Informações para entrega</span>
-            <div class="input__container">
-                <label for="estado">Estado</label>
-                <input type="text" name="estado" maxlength="2" required>
-            </div>
-
-            <div class="input__container">
-                <label for="cidade">Cidade</label>
-                <input type="text" name="cidade" required>
-            </div>
-
-            <div class="input__container">
-                <label for="endereço">Endereço</label>
-                <input type="text" name="endereço" required>
-            </div>
-        </div>
-
-        <div class="input__container">
-            <label for="email">E-mail</label>
-            <input type="text" name="email" required>
-        </div>
-
-        <div class="input__container">
-            <label for="senha">Senha</label>
-            <input type="password" name="senha" required>
-        </div>
+    <main>
         
+        <div class="box_title">
+            <h1 class="title">Emecari A História</h1>
+        </div>
+        <section class="first">
+            <div class="text_R">
+                <p>
+                    O Emecari sempre foi um site falso, criado com muito cuidado pensando em usuários inexistentes,
+                    e cuja missão era ser o trabalho final do curso de desenvolvimento Web em Html5, Css, JavaScript e 
+                    Php do Professor Raphael Jesus da Turma 1003.
+                </p>
+            </div>
+            <div class="text_L">
+                <p>
+                    O conceito do Emecari foi criado em uma manhã de quinta-feira às 7h50 com um rabiscos mal desenhado
+                    em uma folha de caderno e agora é um site completo com 5 páginas compostas por Html5 CSS JavaScript e Php
+                </p>
+            </div>
+        </section>
 
-         <button type="submit">Cadastrar</button>
-    </form>
+        <section class="second">
+                <div class="box_subtitle">
+                    <h3 class="subtitle">Imagens Conceito Projeto Emecari</h3>
+                </div>
+                <div class="images_emecari">
+                    <img class="emecari one" src="img/sobrnos/mainpage.jpg" alt="">
+                    <img class="emecari two" src="img/sobrnos/produto.jpg" alt="">
+                    <img class="emecari three" src="img/sobrnos/carrinho.jpg" alt="">
+                    <img class="emecari four" src="img/sobrnos/login.jpg" alt="">
+                </div>
+        </section>
 
-
+    </main>
     <footer>
         <div class="footer-container">
             <div class="footer-icons">
@@ -137,6 +103,6 @@
             </div>
         </div>
     </footer>
-
+>
 </body>
 </html>
